# agentic_ai

./: .gitignore  ReadME.md  mlflow.db  pyproject.toml  requirements.txt
chat_bot/: RAG.ipynb  chatbot.ipynb  yahoo.ipynb
crewai/: customer-support.ipynb
google-adk/agent1/: agent.py
google-adk/agent1/.adk/: session.db
google-adk/parallel-agent/: agent.py
google-adk/websearch-agent/: agent.py
langchain/: RAG_Websearch.ipynb  chains.py  core_concept.py  document_loader.py  output_parser.py  prompt_template.py  smart_bot.py  text_spliter.py
llmops/: data-process.ipynb  test-llm.ipynb
python/: Python Fundamentals - 2.ipynb  numpy_example.ipynb  pandas_example.ipynb  session1.ipynb  test.txt
rag/: llm_call.ipynb
stock_agent/: alpha_stock_data.py  mcp_client.py  mcp_server.py  stock_history_utils.py
week1/: RAG.ipynb  chatbot.ipynb  dates_prices.json  langchain.ipynb  trade_history.json
week2/: mcp_client.py  mcp_server.py
