[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.73",
    "google-adk>=1.27.2",
    "langchain>=1.2.13",
    "langchain-aws>=1.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.20",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
